=  Rescached v3.0.0 (2019-09-xx)

All the server core functionalities (caches and forwarding) now
implemented inside "dns.Server".  The main function of this package are
for reading options from configuration file (or from command line options)
and watching changes from system resolv.conf.

==  New Features

*  Add launchd script for macOS and make tasks to install and uninstall on
   macOS

==  Breaking Changes

There are also some major changes on configuration file.
All configuration now break into two section '[rescached]' and
'[dns "server"]'.
For more information see new rescached.cfg manual page or an example in
`cmd/rescached/rescached.cfg`.

Some detailed changes are,

*  "parent" option now use URI format instead of IP:PORT.
   This will allow parent name servers to be UDP, TCP, and/or DoH
   simultaneously.

*  "server.doh.parent" and "server.parent.connection" are removed,
   redundant with new "server.parent" format.

*  "cache.threshold" is renamed to "cache.prune_threshold".

*  "file.pid" is removed.
+
The concept of writing PID file when the program start on networking
service is not applicable or relevant anymore on systemd or launchd.
If the program already started, the second program will fail because
the port is already used.


=  Rescached v2.1.2 (2019-03-22)

==  Bug Fix

Use single Go routine to handle request.  This fix mismatched ID in
response due to single response is being use by multiple routines.


=  Rescached v2.1.1 (2019-03-02)

==  Enhancements

*  Run multiple (4) go routines to handle request
*  Make the debug output to be more human readable

==  Bug Fixes

*  cmd/resolver: fix query with zero ID


=  Rescached v2.1.0 (2019-02-01)

==  New Features

-  Change default parent nameservers to Cloudflare DNS.
We believe in Cloudflare!
Please read Cloudflare DNS policy for more information,

	https://developers.cloudflare.com/1.1.1.1/commitment-to-privacy/privacy-policy/privacy-policy/

==  Enhancements
