@@ -1,21 +1,6 @@
 [rescached]
 
 ##
-## tls.certificate:: path to certificate file to serve DNS over HTTPS.
-## Default:: "" (empty)
-##
-
-#tls.certificate = /etc/rescached/localhost.cert.pem
-
-##
-## tls.private_key:: path to certificate's private key file to serve
-## DNS over HTTPS.
-## Default:: "" (empty)
-##
-
-#tls.private_key = /etc/rescached/localhost.key.pem
-
-##
 ## dir.hosts:: If its set, rescached will load all (host) files in path.
 ## if its empty, it will skip loading hosts files even in default location.
 ##
@@ -101,14 +86,47 @@ listen=127.0.0.1:53
 #http.port = 443
 
 ##
+## tls.port:: port to serve DNS over TLS.
+## Default:: 853
+##
+
+#tls.port = 853
+
+##
+## tls.certificate:: path to certificate file to serve DNS over TLS and HTTPS.
+## Default:: "" (empty)
+##
+
+#tls.certificate = /etc/rescached/localhost.cert.pem
+
+##
+## tls.private_key:: path to certificate's private key file to serve
+## DNS over TLS and HTTPS.
+## Default:: "" (empty)
+##
+
+#tls.private_key = /etc/rescached/localhost.key.pem
+
+##
 ## tls.allow_insecure:: If its true, allow serving self signed
-## certificate on DoH connection.
+## certificate on DoH and TLS server.
 ##
 ## Format:: true | false
 ## Default:: false
 ##
 
 #tls.allow_insecure = false
+
+##
+## doh.behind_proxy:: If its true, serve DNS over HTTP only, even if
+## certificate files is defined.
+## This allow serving DNS request forwarded by another proxy server.
+##
+## Format:: true | false
+## Default:: false
+##
+
+#doh.behind_proxy = false
 
 ##
 ## cache.prune_delay:: Delay for pruning worker.
