@@ -1,8 +1,8 @@
 module github.com/shuLhan/rescached-go/v3
 
-go 1.11
+go 1.13
 
 require (
-	github.com/shuLhan/share v0.9.1-0.20191016132846-c698f9750a2a
+	github.com/shuLhan/share v0.9.1-0.20191017163223-a19f1f0a7d65
 	golang.org/x/net v0.0.0-20191014212845-da9a3fd4c582 // indirect
 )
